# prism

./: .gitignore  CLI_USAGE.md  CONTRIBUTING.md  Dockerfile.backend  INTERACTIVE_CLI.md  LICENSE  MULTI_SENSOR_GUIDE.md  Makefile  QUICKSTART.md  README.md  TESTING.md  banner.txt  codegen.sh  demo.tape  prism_test.db  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh  run_prism.sh  test_quick.sh  verify_opt.py
.github/workflows/: ci.yml
backend/: __init__.py  api.py  azure_ingestion.py  benchmark.py  config.py  database.py  engine.py  errors.py  ingestion.py  lidar_utils.py  local_ingestion.py  models.py  plugins.py  requirements.txt  s3_ingestion.py  search_engine.py  server.py  test_client.py  verify_plugins.py  video_utils.py
backend/ingestion/: __init__.py  base.py  config_loader.py  (+6 more)
cli/: __init__.py  banner.py  db_config.py  image_viewer.py  interactive.py  main.py  styled_input.py
docs/: CUSTOM_DATASETS.md  TECHNICAL_DOCUMENTATION.md  api-reference.md  architecture.md  benchmarks.md  configuration.md  error-codes.md  getting-started.md  landing-page-content.md
examples/: download_sample.sh
frontend/: go.mod  go.sum  index.html  main.go  package-lock.json  package.json  styles.go
licensing-worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
packaging/: prism.rb
prism/: LICENSE  README.md  run_backend.sh  run_frontend.sh  run_prism.sh
proto/: prism.proto
scripts/: check_missing_files.py  check_sensor_types.py  cleanup_sweeps.py  migrate_add_sensors.py  setup_test_data.sh  start_dev.sh
(+24 files in other folders)
